# voicemeet

./: .gitignore  AGENTS.md  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MASTER-PROMPT.md  PROGRESS.md  README.md  ROADMAP.md  START_PROMPT.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo.cast
scripts/: demo.sh  install.sh  setup_blackhole.sh  start.command  uninstall.sh
src/voicemeet/: __init__.py  __main__.py  cli.py  hotkey.py  menubar.py
src/voicemeet/audio/: __init__.py  capture.py  mixer.py
src/voicemeet/detect/: __init__.py
src/voicemeet/export/: __init__.py  docx.py  markdown.py  pdf.py
src/voicemeet/store/: __init__.py  db.py  models.py  schema.sql
src/voicemeet/summarize/: __init__.py  ollama_summarizer.py
src/voicemeet/transcribe/: __init__.py  diarize.py  engine.py  vad.py
templates/: summary_prompt.txt
tests/: test_audio.py  test_cli.py  test_db.py  test_detect.py  test_diarize.py  test_engine.py  test_export.py  test_menubar.py  test_summarizer.py
